--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -267,9 +267,9 @@ Your goal is to go from exploring the Prowise data to telling a story with it.
 
 ## The data
 
-## Requirements
+## Requirements Assignment 2
 
--   Use R and R Markdown (or Quarto) to create your visualizations.
+-   Use R Markdown (or Quarto) to create your visualizations.
 -   The markdown document should be in the style of a report: explain your research question, and how you came to your conclusion. Not more than 1000 words.\
 -   Include at least one exploratory graph, and explain how it helped you understand the data.
 -   Only your final, explanatory graph, will be graded. Clearly mark which graph this is.
